Archive2/2c/1dcbfc80f0d8fd/output
main.cpp: In function 'int main()':
main.cpp:3:5: error: 'cotut' is not a member of 'std'
     std::cotut << "Hello World";
     ^
