Archive2/2c/1dcbfc80f0d8fd/main.cpp
#include <iostream>
int main() {
    std::cotut << "Hello World";
	return 0;
}